flux/apps/base/shiori/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shiori
  namespace: shiori
  labels:
    app.kubernetes.io/name: shiori
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: shiori
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shiori
    spec:
      containers:
      - name: shiori
        image: ghcr.io/go-shiori/shiori:v1.7.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /shiori
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: shiori-data
