flux/apps/base/shiori/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiori
  namespace: shiori
spec:
  selector:
    app.kubernetes.io/name: shiori
  ports:
  - name: shiori
    port: 8080
    protocol: TCP
