flux/apps/base/shiori/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiori
  namespace: shiori
spec:
  ingressClassName: nginx
